--- a/style.css
+++ b/style.css
@@ -71,4 +71,85 @@ body{
     font-weight: bold;
 }
 
+.categores{
+    text-align: center;
+}
+
+
+
+.box1{
+    background-color: #fff;
+    border-radius: 0px 20px 0px 20px;
+    box-shadow: 0px 0px 50px rgb(101, 101, 101);
+    margin: 25px;
+}
+
+.box1 h4{
+    padding: 10px;
+}
+
+.box1 img{
+    width: 100%;
+    padding: 30px;
+}
+
+.box2{
+    background-color: #fff;
+    border-radius: 20px 0px 20px 0px;
+    box-shadow: 0px 0px 50px rgb(101, 101, 101);
+    margin: 25px;
+}
+
+.box2 h4{
+    padding: 10px;
+}
+
+.box2 img{
+    width: 100%;
+    padding: 30px;
+}
+
+.box3{
+    background-color: #fff;
+    border-radius: 20px 0px 20px 0px;
+    box-shadow: 0px 0px 50px rgb(101, 101, 101);
+    margin: 25px;
+}
+
+.box3 h4{
+    padding: 10px;
+}
+
+.box3 img{
+    width: 100%;
+    padding: 30px;
+}
+
+.box4 img{
+    width: 100%;
+}
+
+.catagores{
+    margin: 40px;
+}
+
+.catagores h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.line{
+    width: 150px;
+    height: 10px;
+    border: none;
+    border-radius: 10px;
+    background-image: linear-gradient(to right,rgb(255, 173, 20), rgb(255, 115, 0));
+}
+
+.footer{
+    text-align: center;
+    background-color: thistle;
+}
+
 
